--- a/src/markdown/mas/modelleeroefening_Gele_kwik.Rmd
+++ b/src/markdown/mas/modelleeroefening_Gele_kwik.Rmd
@@ -4225,74 +4225,97 @@ fusie_afstand_lang <- 50
 
 ### Data preparatie
 
-We hebben voor elke waarneming hun `x`- en `y`-coördinaten nodig in een geprojecteerd coördinatensysteem. `survey` is een geheel getal id voor elke telling. Een survey is dus een unieke combinatie van een plot, een telperiode en een jaar. `status` is een geheel getal dat de broedcode aangeeft. Een hogere waarde veronderstelt meer zekerheid over een broedgeval. `id` is een unieke id voor iedere observatie. Een observatie is een waarneming van één enkel individu op een bepaalde locatie in een bepaalde survey met een bepaalde status.
+We hebben voor elke waarneming hun `x`- en `y`-coördinaten nodig in een geprojecteerd coördinatensysteem. `survey` is een geheel getal id voor elke telling. Een survey is dus een unieke combinatie van een plot en een telperiode. `status` is een geheel getal dat de broedcode aangeeft. Een hogere waarde veronderstelt meer zekerheid over een broedgeval. `id` is een unieke id voor iedere observatie. Een observatie is een waarneming van één enkel individu op een bepaalde locatie in een bepaalde survey met een bepaalde status. Voor elk jaar doen we een aparte clustering.
 
 ```{r}
-# Voorbereiden dataframe
-df_territoria_lang <- gele_kwik_presences %>% 
-  group_by(plotnaam, periode_in_jaar, jaar) %>%
-  mutate(survey = cur_group_id(),
-         status = as.integer(wrntype)) %>%
-  ungroup() %>%
-  rename(x = x_coord, y = y_coord)
-
-# Dupliceer rijen volgens aantal (elke rij is 1 individu)
-df_territoria_lang <- 
-  tibble(
-    df_territoria_lang[rep(seq_len(dim(df_territoria_lang)[1]), 
-                  df_territoria_lang$aantal), , 
-                  drop = FALSE], 
-    row.names = NULL
-  ) %>%
-  mutate(aantal = 1)
-
-# Gedupliceerde rijen hebben zelfde oid --> nieuw id maken voor elke waarneming
-df_territoria_lang <- df_territoria_lang %>% mutate(id = row_number())
+make_territoria_df <- function(dataframe, j) {
+  # Voorbereiden dataframe
+  df_territoria_lang <- dataframe %>%
+    filter(jaar == j) %>%
+    group_by(plotnaam, periode_in_jaar) %>%
+    mutate(survey = cur_group_id(),
+           status = as.integer(wrntype)) %>%
+    ungroup() %>%
+    rename(x = x_coord, y = y_coord)
+  
+  # Dupliceer rijen volgens aantal (elke rij is 1 individu)
+  df_territoria_lang <- 
+    tibble(
+      df_territoria_lang[rep(seq_len(dim(df_territoria_lang)[1]), 
+                    df_territoria_lang$aantal), , 
+                    drop = FALSE], 
+      row.names = NULL
+    ) %>%
+    mutate(aantal = 1)
+  
+  # Gedupliceerde rijen hebben zelfde oid --> nieuw id maken voor elke waarneming
+  df_territoria_lang %>% 
+    mutate(id = row_number())
+}
 ```
 
-Zodra we een dataframe met de waarnemingen hebben, maken we verbinding met een SQLite-database en importeren de waarnemingen. Deze kent elke waarneming toe aan een eigen cluster.
+We maken een dataframe voor elk jaar.
 
-```{r SQLite-territoria}
-set.seed(20221201)
-
-conn <- connect_db()
-import_observations(observations = df_territoria_lang, conn = conn, 
-                    max_dist = fusie_afstand_lang)
-```
-
-Vervolgens moeten we de afstandsmatrix berekenen. Dit is niet de volledige afstandsmatrix. We laten alle irrelevante afstanden weg, b.v. tussen waarnemingen van dezelfde telling of met een afstand groter dan tweemaal de maximale clusterafstand.
-
-```{r distmatrix-territoria}
-distance_matrix(conn = conn, max_dist = fusie_afstand_lang)
+```{r}
+for (j in unique(gele_kwik_presences$jaar)) {
+  assign(paste0("df_territoria_", j), make_territoria_df(gele_kwik_presences, j))
+}
 ```
 
 
 ### Clusteren
 
-Nu kunnen we beginnen met het clusteren. De clustering houdt rekening met alle waarnemingen met een broedcode hoger dan of gelijk aan de ingestelde broedcode. Herhaal de clustering voor elk broedcodeniveau. Merk op dat het overslaan van niveaus impliceert dat we ze combineren met het lagere niveau.
+Zodra we een dataframe met de waarnemingen hebben, maken we verbinding met een SQLite-database en importeren de waarnemingen. Deze kent elke waarneming toe aan een eigen cluster. Vervolgens moeten we de afstandsmatrix berekenen. Dit is niet de volledige afstandsmatrix. We laten alle irrelevante afstanden weg, b.v. tussen waarnemingen van dezelfde telling of met een afstand groter dan tweemaal de maximale clusterafstand. Nu kunnen we beginnen met het clusteren. De clustering houdt rekening met alle waarnemingen met een broedcode hoger dan of gelijk aan de ingestelde broedcode. Herhaal de clustering voor elk broedcodeniveau. Merk op dat het overslaan van niveaus impliceert dat we ze combineren met het lagere niveau.
 
-```{r cluster-territoria}
-# Broedcodes
-broedcodes <- sort(unique(df_territoria_lang$status))
-
-# Cluster van meest zekere broedcode naar minder zeker
-result <- vector(mode = "list", length = length(broedcodes))
-for (broedcode in rev(broedcodes)) {
-  print(paste0("Clusteren broedcode ", broedcode))
-  cluster_observation(conn = conn, status = broedcode, 
-                      max_dist = fusie_afstand_lang)
-  result[[broedcode]] <- get_cluster(conn = conn)
+```{r}
+territoria_cluster <- function(dataframe, fusie_afstand) {
+  # Maak database connectie en importeer waarnemingen
+  conn <- connect_db()
+  import_observations(observations = dataframe, conn = conn, 
+                      max_dist = fusie_afstand)
+  
+  # Bereken afstandsmatrix
+  distance_matrix(conn = conn, max_dist = fusie_afstand)
+  
+  # Broedcodes
+  broedcodes <- sort(unique(dataframe$status))
+  
+  # Cluster van meest zekere broedcode naar minder zeker
+  result <- vector(mode = "list", length = length(broedcodes))
+  for (broedcode in rev(broedcodes)) {
+    print(paste0("Clusteren broedcode ", broedcode))
+    cluster_observation(conn = conn, status = broedcode, 
+                        max_dist = fusie_afstand)
+    result[[broedcode]] <- get_cluster(conn = conn)
+  }
+  dbDisconnect(conn = conn)
+  
+  # Output clusternummers
+  result[[1]]$observations$cluster
 }
-dbDisconnect(conn = conn)
-
-# voeg clusternummer toe aan de dataset
-df_territoria_lang$cluster <- result[[1]]$observations$cluster
 ```
 
+```{r}
+set.seed(20221202)
+df_territoria_2018$cluster <- paste(territoria_cluster(df_territoria_2018,
+                                    fusie_afstand_lang), 2018, sep = "_")
+df_territoria_2019$cluster <- paste(territoria_cluster(df_territoria_2019,
+                                    fusie_afstand_lang), 2019, sep = "_")
+df_territoria_2020$cluster <- paste(territoria_cluster(df_territoria_2020,
+                                    fusie_afstand_lang), 2020, sep = "_")
+df_territoria_2021$cluster <- paste(territoria_cluster(df_territoria_2021,
+                                    fusie_afstand_lang), 2021, sep = "_")
+df_territoria_2022$cluster <- paste(territoria_cluster(df_territoria_2022,
+                                    fusie_afstand_lang), 2022, sep = "_")
+
+df_territoria_lang <- rbind(df_territoria_2018, df_territoria_2019, 
+                            df_territoria_2020, df_territoria_2021, 
+                            df_territoria_2022)
+```
 
 ### Resultaten
 
-In totaal hadden we `r nrow(result[[1]]$observations)` observaties (waarneming van een bepaald individu in een plot in een bepaalde telperiode in een bepaald jaar). Nu hebben we `r nrow(result[[1]]$cluster)` clusters (= broedparen). We vergelijken het aantal territoria met het gemiddelde en maximum over de telperiodes per plot per jaar. Bij deze laatste is ook met absensies rekening gehouden (maakt voor maximum niet uit). Voor het 
+In totaal hadden we `r nrow(df_territoria_lang)` observaties (waarneming van een bepaald individu in een plot in een bepaalde telperiode in een bepaald jaar). Nu hebben we `r length(unique(df_territoria_lang$cluster))` clusters (= broedparen). We vergelijken het aantal territoria met het gemiddelde en maximum over de telperiodes per plot per jaar. Bij deze laatste is ook met absensies rekening gehouden (maakt voor maximum niet uit). Voor het 
 
 ```{r}
 # Bereken aantal plots per regio per jaar
@@ -4389,7 +4412,7 @@ dist_df_centroid <- df_territoria_lang %>%
   st_centroid() %>%
   ungroup() %>%
   arrange(cluster) %>%
-  distinct() %>%
+  distinct(cluster) %>%
   rename(geometry = geom)
 
 # Bereken afstanden van centroide tot telpunt
