--- a/src/markdown/mas/modelleeroefening_Gele_kwik.Rmd
+++ b/src/markdown/mas/modelleeroefening_Gele_kwik.Rmd
@@ -4387,7 +4387,17 @@ gele_kwik %>%
 
 ## Distance sampling
 
-blablabla
+In tegenstelling tot de eerdere analyses met de functie `ds()` uit de **Distance** package, gaan we hier expliciet distance sampling in 2 delen opsplitsen:
+
+1. Schatting detectiekans
+    - Fit detectiecurve op afstanden van waarneming tot telpunt (ruwe, ongeclusterde data)
+    - Detectiekans is area under the curve
+    - `ddf()` functie **mrds** package
+2. Schatting abundanties en densiteiten
+    - Extrapoleer geclusterde waarnemingen (territoria) m.b.v. detectiekans bekomen in 1
+    - Bereken densiteiten door de gesamplede oppervlakte in beschouwing te nemen
+    - `dht()` functie **mrds** package
+
 
 ### Data preparatie
 
@@ -4444,10 +4454,19 @@ dist_df %>%
         legend.justification = c(1, 0))
 ```
 
+In een tweede stap maken we de dataset klaar om de detectiecurve te fitten. We hebben een kolom `object` nodig: volgnummer voor elke waarneming; een kolom `distance`: afstand tot waarnemer voor elke waarneming; kolommen met covariaten: `sbp`, `regio` en `openheid`. 
 
 ```{r}
-conversion_factor <- convert_units("meter", NULL, "Square kilometer")
+detection_df <- dist_df %>%
+  st_drop_geometry() %>%
+  rename(object = id) %>%
+  select(object, distance, regio, sbp, openheid)
+```
 
+Ten slotte maken we de dataframes en parameters klaar om de densiteiten te berekenen. `Region_table` met de oppervlaktes per regio-jaar (totale oppervlakte strata), `sample_table` geeft aan welke samples in welke regio's voorkomen en met welke effort (effort is overal 1 bij ons omdat we met territoria al de verschillende periodes hebben beschouwd) en `obs_table` die aangeeft welke waarnemingen in welke plots en strata (regio-jaar) zitten. De conversiefactor zet de afstanden om van meter naar vierkante kilometer.
+
+```{r}
+# Bereken oppervlaktes van de regio's
 areas <- perimeters %>% mutate(Area = as.numeric(st_area(geom)) / 1e6) %>%
             select(regio = Naam, Area) %>%
             st_drop_geometry()
@@ -4463,7 +4482,20 @@ sample_table <- design_langterm %>%
   mutate(Region.Label = paste(regio, jaar, sep = " - "),
          Effort = 1) %>%
   select(Sample.Label = plotnaam, Region.Label, Effort)
+
+conversion_factor <- convert_units("meter", NULL, "Square kilometer")
 ```
+
+Voor de `obs_table` 
+
+```{r}
+obs_table <- dist_df %>%
+  st_drop_geometry() %>%
+  select(object = cluster, Region.Label, Sample.Label = plotnaam) %>%
+  distinct() %>%
+  as_tibble()
+```
+
 
 
 ### Model fit en selectie
