--- a/src/markdown/mas/modelleeroefening_Gele_kwik.Rmd
+++ b/src/markdown/mas/modelleeroefening_Gele_kwik.Rmd
@@ -4521,9 +4521,101 @@ obs_table <- dist_df %>%
 ```
 
 
-### Model fit en selectie
+### Model fit
+
+**1. Bereken detectiekans**  
+We fitten half-normal en hazard-rate key functions waarbij we alle combinaties van covariaten beschouwen. Ook interacties ...
 
 
+```{r}
+match_variables <- c("regio", "jaar", "sbp", "openheid")
+combos <- sapply(seq(length(match_variables)), function(i) {
+  as.list(as.data.frame(combn(x = match_variables, m = i)))
+})
+
+combos <- unlist(combos, recursive = FALSE)
+
+forms1 <- sapply(combos, function(x) {
+  as.formula(paste0("~", paste(x, collapse = "+")))
+  })
+forms2 <- sapply(combos, function(x) {
+  as.formula(paste0("~", paste(x, collapse = "*")))
+  })[-c(1:4)]
+
+forms <- c(forms1, forms2)
+
+keys <- c("hn", "hr")
+```
+
+
+```{r}
+# Null model
+detection_hn0 <- ddf(data = detection_df, method = "ds",
+  dsmodel = ~mcds(key = "hn", formula = ~1),
+  meta.data = list(width = 300, point = TRUE))
+
+detection_hr0 <- ddf(data = detection_df, method = "ds",
+  dsmodel = ~mcds(key = "hr", formula = ~1),
+  meta.data = list(width = 300, point = TRUE))
+
+# Sla namen van de gefitte models op
+fitted_models <- c("detection_hn0", "detection_hr0")
+
+for (i in seq_len(length(forms))) {
+  f <- as.character(forms[i])
+  
+  for (k in keys) {
+    tt <- tryCatch(
+      ddf(data = detection_df, method = "ds",
+        dsmodel = ~mcds(key = k, formula = f),
+        meta.data = list(width = 300, point = TRUE)),
+      error = function(e) e, warning = function(w) w)
+    
+    mod_name <- paste0("detection_", k, i)
+    
+    if (is(tt, "warning")) {
+      print(paste0("Warning: Model '", mod_name, "' did not converge. ", 
+                   "Formula: '", f, "'. Key: '", k, "'."))
+    } else if (is(tt, "error")) {
+      print(paste0("Error: Model '", mod_name, "' not fitted. ", 
+                   "Formula: '", f, "'. Key: '", k, "'."))
+    } else {
+      det_model <- ddf(data = detection_df, method = "ds",
+        dsmodel = ~mcds(key = k, formula = f),
+        meta.data = list(width = 300, point = TRUE))
+      
+      print(paste0("Model '", mod_name, "' fitted. ", 
+                   "Formula: '", f, "'. Key: '", k, "'."))
+      
+      assign(mod_name, det_model)
+      fitted_models <- c(fitted_models, mod_name)
+    }
+  }
+}
+```
+
+```{r}
+test <- c(NULL)
+
+for (m in fitted_models) {
+  dens_schat <- dht(model = get(m), region.table = region_table, 
+      sample.table = sample_table, obs.table = obs_table,
+      options = list(group = FALSE, convert.units = conversion_factor))
+  
+  dsmodel <- list(ddf = get(m), dht = dens_schat)
+  class(dsmodel) <- "dsmodel"
+
+  suffix <- sub("^.+_", "", m)
+  assign(paste0("dens_jaren_", suffix), dsmodel)
+  
+  test <- c(test, paste0("dens_jaren_", suffix))
+}
+```
+
+
+### Model selectie
+
+lukt niet met test...
 
 ### Resultaten
 
