--- a/src/markdown/mas/modelleeroefening_Gele_kwik.Rmd
+++ b/src/markdown/mas/modelleeroefening_Gele_kwik.Rmd
@@ -4461,7 +4461,8 @@ In een tweede stap maken we de dataset klaar om de detectiecurve te fitten. We h
 detection_df <- dist_df %>%
   st_drop_geometry() %>%
   rename(object = id) %>%
-  select(object, distance, regio, jaar, sbp, openheid)
+  select(object, distance, regio, jaar, sbp, openheid) %>%
+  mutate(jaar = factor(jaar, ordered = TRUE))
 ```
 
 Ten slotte maken we de dataframes en parameters klaar om de densiteiten te berekenen. `Region_table` met de oppervlaktes per regio-jaar (totale oppervlakte strata), `sample_table` geeft aan welke samples in welke regio's voorkomen en met welke effort (effort is overal 1 bij ons omdat we met territoria al de verschillende periodes hebben beschouwd) en `obs_table` die aangeeft welke waarnemingen in welke plots en strata (regio-jaar) zitten. Ten slotte zet de conversiefactor de afstanden om van meter naar vierkante kilometer.
